--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
-
+<div style="width:75%"><script
+                src="http://gist.github.com/3299719.js"></script></div>
 <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
 
 <h3>Designer Templates</h3>
