--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ $ git fetch origin
 $ git checkout gh-pages
 </code></pre>
           <p>
-          <div style="width:75%"><script
+          <div><script
                   src="http://gist.github.com/3299719.js"></script></div>
           </p>
           <p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
