--- a/tutorial.html
+++ b/tutorial.html
@@ -89,7 +89,13 @@ for ( var i=0; i< rules.length; i++ ){
           out these filters - the sequential JavaScript versions are already
           implemented. To switch to webcam video, click the "Webcam" toggle in
           the top-left corner.
-          
+
+          <h2> Sepia Toning </h2>
+          <a
+              href="http://en.wikipedia.org/wiki/Photographic_print_toning#Sepia_toning">Sepia
+              Toning</a> is a process performed on black-and-white print
+          photographs to give them a warmer color. This filter simulates the
+          sepia toning process on digital photographs or video.
 
 
 
